<resources>
    <string name="app_name">Easy Transportation</string>
    <string name="title_activity_booking">Vehicle Type</string>
    <string name="dashboard_title">Select Vehicle</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_book_now">Book Now</string>
    <string name="menu_on_going">On-going</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_profile">Profile</string>
</resources>